--- a/src/Components/SearchDog/SearchDog.css
+++ b/src/Components/SearchDog/SearchDog.css
@@ -23,18 +23,20 @@
   font-weight: bold;
   display: block;
   margin-bottom: 5px;
+  justify-content: center;
 }
 
 /* Dropdown */
 .breed-dropdown {
-  width: 100%;
   margin-bottom: 15px;
   font-size: 1rem;
+  width: 100%;
 }
 
 /* Input fields */
 .input-container {
   margin-bottom: 15px;
+  max-width: 1180px;
 }
 
 .age-input,
