--- a/src/Components/SearchDog/SearchDog.css
+++ b/src/Components/SearchDog/SearchDog.css
@@ -118,6 +118,40 @@
   color: #1565c0;
 }
 
+.favorites {
+  margin-top: 20px;
+  padding: 20px;
+  background: #6088b9;
+  border-radius: 10px;
+  box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.favorites h2 {
+  font-size: 1.5rem;
+  color: #1421ae;
+  font-weight: bold;
+}
+
+.favorites p {
+  color: #757575;
+}
+
+.favorites ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.favorites ul li {
+  font-size: 1rem;
+  color: #2e6d7d;
+  margin: 8px 0;
+  padding: 10px;
+  border-radius: 8px;
+  background: #c8e6c9;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
 .match-container {
   margin-top: 20px;
   text-align: center;
@@ -128,7 +162,7 @@
     to bottom right,
     #a5d6a7,
     #81c784
-  ); /* Light green background */
+  );
   border-radius: 15px;
   box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.15);
   padding: 20px;
@@ -139,12 +173,12 @@
 
 .match-title {
   font-size: 1.5rem;
-  color: #388e3c; /* Darker green for the title */
+  color: #388e3c;
   font-weight: bold;
 }
 
 .match-button {
-  background-color: #388e3c; /* Dark green for button */
+  background-color: #388e3c;
   color: white;
   padding: 10px 15px;
   border: none;
